fix overflow issue when there is too much lists in height off sidebar

--- a/src/styles/modules/todos/_sidebar.scss
+++ b/src/styles/modules/todos/_sidebar.scss
@@ -117,4 +117,10 @@
       }
     }
   }
+
+  .task-lists-container {
+    height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
 }
